@@ -33,23 +33,44 @@ L<Net::XMPP2::Ext::DataForm> allows you to construct, receive and
 answer data forms. This is neccessary for all sorts of things in XMPP.
 For example XEP-0055 (Jabber Search) or also In-band registration.
 
-=item XEP-0086 - Error Condition Mappings
-
-   "A mapping to enable legacy entities to correctly handle errors from XMPP-aware entities."
-
-This extension will enable sending of the old error codes when generating a stanza
-error with for example the C<write_error_tag> method of L<Net::XMPP2::Writer>.
-
 =item XEP-0030 - Service Discovery
 
 This extension allows you to send service discovery requests and
 define a set of discoverable information. See also L<Net::XMPP2::Ext::Disco>.
+
+=item XEP-0066 - Out of Band Data
+
+This extension allows to receive and send out of band data URLs
+and provides helperfunctions to handle jabber:x:oob data.
+See also L<Net::XMPP2::Ext::OOB>.
+
+=item XEP-0078 - Non-SASL Authentication
+
+After lots of sweat and curses I implemented finally iq auth.
+Unfortunately the XEP-0078 specifies things that are not implemented,
+in fact the only server that worked was openfire and psyced.org.
+
+So I de-analized the iq auth and now it just barfs the IQ set out
+on the stream with the username and the password.
+
+If you insist on XEP-0078 behaviour enable the C<anal_iq_auth> option
+when creating the stream.
+
+You can also completly disable iq auth, well, just see the documentation
+of L<Net::XMPP2::Connection>
 
 =item XEP-0077 - In-Band Registration
 
 This extension lets you register new accounts "in-band".
 To use this look at the description of the C<register> option to the C<new>
 method of L<Net::XMPP2::Connection>.
+
+=item XEP-0086 - Error Condition Mappings
+
+   "A mapping to enable legacy entities to correctly handle errors from XMPP-aware entities."
+
+This extension will enable sending of the old error codes when generating a stanza
+error with for example the C<write_error_tag> method of L<Net::XMPP2::Writer>.
 
 =item XEP-0114 - Jabber Component Protocol
 
@@ -58,12 +79,6 @@ and makes it possible to implement services like pubsub, muc, or
 whatever you can imagine (even gateways).
 See documentation of L<Net::XMPP2::Component> and the example
 C<samples/simple_component>.
-
-=item XEP-0066 - Out of Band Data
-
-This extension allows to receive and send out of band data URLs
-and provides helperfunctions to handle jabber:x:oob data.
-See also L<Net::XMPP2::Ext::OOB>.
 
 =back
 
